fix contrast exhibitions

--- a/css/our-exhibitions.css
+++ b/css/our-exhibitions.css
@@ -29,6 +29,9 @@ p {
 
 h2 {
   padding: 20px;
+  background: black;
+  height: max-content;
+  max-width: max-content;
 }
 
 .card--cosmology {
